--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,9 +1,13 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
-    <style name="Base.Theme.Planificador_De_Viajes_Rayon_Alonso_Ivan" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+
+
+    <style name="Base.Theme.Planificador_De_Viajes_Rayon_Alonso_Ivan"
+        parent="Theme.AppCompat.Light.DarkActionBar">
+
     </style>
 
-    <style name="Theme.Planificador_De_Viajes_Rayon_Alonso_Ivan" parent="Base.Theme.Planificador_De_Viajes_Rayon_Alonso_Ivan" />
+
+    <style name="Theme.Planificador_De_Viajes_Rayon_Alonso_Ivan"
+        parent="Base.Theme.Planificador_De_Viajes_Rayon_Alonso_Ivan" />
+
 </resources>
