--- a/app/src/main/res/menu/menu_principal.xml
+++ b/app/src/main/res/menu/menu_principal.xml
@@ -3,9 +3,9 @@
 
     <item
         android:id="@+id/opcion_nuevo_viaje"
-        android:title="Nuevo viaje" />
+        android:title="@string/menu_nuevo_viaje" />
 
     <item
         android:id="@+id/opcion_acerca_de"
-        android:title="Acerca de" />
+        android:title="@string/menu_acerca_de" />
 </menu>
